syntax = "proto3";

package periodic_events;

// Optional: helps with C# namespace generation
option csharp_namespace = "PeriodicEvents.Proto";

import "google/protobuf/timestamp.proto";

// ============================================================================
// Core Messages
// ============================================================================

// Represents a recurring event template
message PeriodicEvent {
  string id = 1;                    // UUID as string
  string name = 2;
  string description = 3;
  int32 period_days = 4;            // Number of days between occurrences
  bool is_active = 5;
  google.protobuf.Timestamp created_at = 6;
  google.protobuf.Timestamp updated_at = 7;
  
  // Optional: for more flexible scheduling
  PeriodType period_type = 8;
  int32 period_value = 9;           // The numeric value (e.g., 2 for "every 2 weeks")
}

// Individual occurrence of a periodic event
message EventOccurrence {
  string id = 1;                    // UUID as string
  string periodic_event_id = 2;     // Foreign key reference
  Date scheduled_date = 3;          // When it should happen
  Date completed_date = 4;          // When it actually happened (optional)
  OccurrenceStatus status = 5;
  string notes = 6;
  google.protobuf.Timestamp created_at = 7;
  google.protobuf.Timestamp completed_at = 8;
}

// ============================================================================
// Enums
// ============================================================================

enum PeriodType {
  PERIOD_TYPE_UNSPECIFIED = 0;
  PERIOD_TYPE_DAYS = 1;
  PERIOD_TYPE_WEEKS = 2;
  PERIOD_TYPE_MONTHS = 3;
  PERIOD_TYPE_YEARS = 4;
}

enum OccurrenceStatus {
  OCCURRENCE_STATUS_UNSPECIFIED = 0;
  OCCURRENCE_STATUS_PENDING = 1;
  OCCURRENCE_STATUS_COMPLETED = 2;
  OCCURRENCE_STATUS_SKIPPED = 3;
  OCCURRENCE_STATUS_OVERDUE = 4;
}

// ============================================================================
// Supporting Types
// ============================================================================

// Date-only type (no time component)
message Date {
  int32 year = 1;   // e.g., 2025
  int32 month = 2;  // 1-12
  int32 day = 3;    // 1-31
}

// ============================================================================
// Request/Response Messages (for API operations)
// ============================================================================

message CreatePeriodicEventRequest {
  string name = 1;
  string description = 2;
  int32 period_days = 3;
  PeriodType period_type = 4;
  int32 period_value = 5;
}

message CreatePeriodicEventResponse {
  PeriodicEvent event = 1;
  EventOccurrence first_occurrence = 2;  // Automatically created
}

message CompleteOccurrenceRequest {
  string occurrence_id = 1;
  Date completion_date = 2;
  string notes = 3;
}

message CompleteOccurrenceResponse {
  EventOccurrence completed_occurrence = 1;
  EventOccurrence next_occurrence = 2;   // The newly scheduled one
}

message ListOccurrencesRequest {
  string periodic_event_id = 1;          // Optional: filter by event
  OccurrenceStatus status = 2;            // Optional: filter by status
  Date start_date = 3;                    // Optional: date range filter
  Date end_date = 4;
  int32 page_size = 5;
  string page_token = 6;
}

message ListOccurrencesResponse {
  repeated EventOccurrence occurrences = 1;
  string next_page_token = 2;
}

message GetUpcomingOccurrencesRequest {
  int32 days_ahead = 1;                   // How many days to look ahead
  bool include_overdue = 2;
}

message GetUpcomingOccurrencesResponse {
  repeated EventOccurrence occurrences = 1;
}

// ============================================================================
// Service Definition (optional - for gRPC)
// ============================================================================

service PeriodicEventService {
  // Periodic Event management
  rpc CreatePeriodicEvent(CreatePeriodicEventRequest) returns (CreatePeriodicEventResponse);
  rpc GetPeriodicEvent(GetPeriodicEventRequest) returns (PeriodicEvent);
  rpc ListPeriodicEvents(ListPeriodicEventsRequest) returns (ListPeriodicEventsResponse);
  rpc UpdatePeriodicEvent(UpdatePeriodicEventRequest) returns (PeriodicEvent);
  rpc DeletePeriodicEvent(DeletePeriodicEventRequest) returns (DeletePeriodicEventResponse);
  
  // Occurrence management
  rpc CompleteOccurrence(CompleteOccurrenceRequest) returns (CompleteOccurrenceResponse);
  rpc SkipOccurrence(SkipOccurrenceRequest) returns (EventOccurrence);
  rpc ListOccurrences(ListOccurrencesRequest) returns (ListOccurrencesResponse);
  rpc GetUpcomingOccurrences(GetUpcomingOccurrencesRequest) returns (GetUpcomingOccurrencesResponse);
}

// Additional request/response messages for the service
message GetPeriodicEventRequest {
  string id = 1;
}

message ListPeriodicEventsRequest {
  bool active_only = 1;
  int32 page_size = 2;
  string page_token = 3;
}

message ListPeriodicEventsResponse {
  repeated PeriodicEvent events = 1;
  string next_page_token = 2;
}

message UpdatePeriodicEventRequest {
  string id = 1;
  string name = 2;
  string description = 3;
  int32 period_days = 4;
  bool is_active = 5;
}

message DeletePeriodicEventRequest {
  string id = 1;
}

message DeletePeriodicEventResponse {
  bool success = 1;
}

message SkipOccurrenceRequest {
  string occurrence_id = 1;
  string reason = 2;
}
